Fixed z-index sticky nav

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ figcaption {
     position: fixed;
     width:100%;
     box-shadow: 0 1px 4px rgba(0,0,0,.4);
+    z-index: 1000;
   }
 
 	.main-nav {
